--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -217,6 +217,105 @@ select {
   line-height: 1.1;
 }
 
+.numbered-title {
+  font-family: var(--ff-sans-cond);
+  font-size: var(--fs-500);
+  text-transform: uppercase;
+  letter-spacing: 4.72px;
+}
+
+.numbered-title span {
+  margin-right: 0.5em;
+  font-weight: 700;
+  color: hsl(var(--clr-white)/0.25);
+}
+
+/* Components */
+.large-button {
+  position: relative;
+  display: grid;
+  z-index: 1;
+  place-items: center;
+  padding: 0 2em;
+  aspect-ratio: 1;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+.large-button::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  background-color: hsl(var(--clr-white)/0.15);
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 500ms linear, transform 500ms ease-in-out;
+}
+
+.large-button:hover::after,
+.large-button:focus::after {
+  transform: scale(1.5);
+  opacity: 1;
+}
+
+/* Nav */
+.primary-navigation {
+  --gap: 8rem;
+  --underline-gap: 2rem;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.primary-navigation a {
+  text-decoration: none;
+}
+
+.primary-navigation a > span {
+  font-weight: 700;
+  margin-right: 0.5em;
+}
+
+.underline-indicators > * {
+  padding: var(--underline-gap, 1rem) 0;
+  border-bottom: 0.2rem solid hsl(var(--clr-white)/0);
+}
+
+.underline-indicators > *:hover,
+.underline-indicators > *:focus {
+  border-color: hsl(var(--clr-white)/0.5);
+}
+
+.underline-indicators > .active,
+.underline-indicators > [aria-selected=true] {
+  border-color: hsl(var(--clr-white)/1);
+  color: hsl(var(--clr-white)/1);
+}
+
+.tab-list {
+  --gap: 2rem;
+}
+
+.dot-indicators > * {
+  cursor: pointer;
+  border: 0;
+  border-radius: 50%;
+  aspect-ratio: 1;
+  padding: 0.25rem;
+  background-color: hsl(var(--clr-white)/0.25);
+}
+
+.dot-indicators > *:hover,
+.dot-indicators > *:focus {
+  background-color: hsl(var(--clr-white)/0.5);
+}
+
+.dot-indicators > [aria-selected=true] {
+  background-color: hsl(var(--clr-white)/1);
+}
+
 /* ========================== */
 /*       Utility Classes      */
 /* ========================== */
@@ -228,6 +327,11 @@ select {
 .grid {
   display: grid;
   gap: var(--gap, 1rem);
+}
+
+.flow > * + * {
+  margin-top: 1rem;
+  outline: 1px solid red;
 }
 
 .container {
