--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,6 +1,7 @@
 @import 'config/variables';
 @import 'base/base';
 @import 'layout/layout';
+@import 'components/primary';
 @import 'components/crew';
 @import 'components/destination';
 @import 'components/technology';
