--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,15 +37,15 @@
 :root {
   /* ========= COLORS ========= */
   /* ========= Primary ========= */
-  --clr-dark: 230, 35%, 7%;
-  --clr-light: 231, 77%, 90%;
-  --clr-white: 0, 0%, 100%;
+  --clr-dark: hsl(230, 35%, 7%);
+  --clr-light: hsl(231, 77%, 90%);
+  --clr-white: hsl(0, 0%, 100%);
   /* ========= FONT and TYPOGRAPHY ========= */
   --ff-serif: "Bellefair", serif;
   --ff-sans-cond: "Barlow Condensed", sans-serif;
   --ff-sans-normal: "Barlow", sans-serif;
   /* ========= Font sizes ========= */
-  --fs-900: 9.375rem;
+  --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
   --fs-800: 6.25rem;
   --fs-700: 3.5rem;
   --fs-600: 2rem;
@@ -55,13 +55,10 @@
   --fs-200: 0.875rem;
 }
 
-/* =============== */
-/*      Reset      */
-/* =============== */
-/* Box Sizing */
-*,
-*::after,
-*::before {
+/* ========= BASE ========= */
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -69,277 +66,110 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Reset Margins */
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-figure,
-picture {
-  margin: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-p {
-  font-weight: 400;
-}
-
-/* Set up the body */
 body {
-  line-height: 1.5;
-  min-height: 100vh;
+  background-color: var(--clr-dark);
+  color: var(--clr-white);
   font-family: var(--ff-sans-normal);
-  font-size: var(--fs-400);
-  color: hsl(var(--clr-white));
-  background-color: hsl(var(--clr-dark));
+  font-size: var(--font-normal);
+  overflow-x: hidden;
 }
 
-/* Images */
-img,
-picture {
-  max-width: 100%;
-  display: block;
-}
-
-/* Form elements */
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-/* Remove animations for people who have turned them off */
-@media (prefers-reduced-motion: reduce) {
-  *,
-*::before,
-*::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
-}
-/* Colors */
-.bg-dark {
-  background-color: hsl(var(--clr-dark));
-}
-
-.bg-accent {
-  background-color: hsl(var(--clr-light));
-}
-
-.bg-white {
-  background-color: hsl(var(--clr-white));
-}
-
-.text-dark {
-  color: hsl(var(--clr-dark));
-}
-
-.text-accent {
-  color: hsl(var(--clr-light));
-}
-
-.text-white {
-  color: hsl(var(--clr-white));
-}
-
-/* Typography */
-.ff-serif {
-  font-family: var(--ff-serif);
-}
-
-.ff-sans-cond {
-  font-family: var(--ff-sans-cond);
-}
-
-.ff-sans-normal {
-  font-family: var(--ff-sans-normal);
-}
-
-.letter-spacing-1 {
-  letter-spacing: 4.75px;
-}
-
-.letter-spacing-2 {
-  letter-spacing: 2.7px;
-}
-
-.letter-spacing-3 {
-  letter-spacing: 2.35px;
-}
-
-.uppercase {
-  text-transform: uppercase;
-}
-
-.fs-900 {
-  font-size: var(--fs-900);
-}
-
-.fs-800 {
-  font-size: var(--fs-800);
-}
-
-.fs-700 {
-  font-size: var(--fs-700);
-}
-
-.fs-600 {
-  font-size: var(--fs-600);
-}
-
-.fs-500 {
-  font-size: var(--fs-500);
-}
-
-.fs-400 {
-  font-size: var(--fs-400);
-}
-
-.fs-300 {
-  font-size: var(--fs-300);
-}
-
-.fs-200 {
-  font-size: var(--fs-200);
-}
-
-.fs-900, .fs-800, .fs-700, .fs-600 {
-  line-height: 1.1;
-}
-
-.numbered-title {
-  font-family: var(--ff-sans-cond);
-  font-size: var(--fs-500);
-  text-transform: uppercase;
-  letter-spacing: 4.72px;
-}
-
-.numbered-title span {
-  margin-right: 0.5em;
-  font-weight: 700;
-  color: hsl(var(--clr-white)/0.25);
-}
-
-/* Components */
-.large-button {
-  position: relative;
-  display: grid;
-  z-index: 1;
-  place-items: center;
-  padding: 0 2em;
-  aspect-ratio: 1;
+a {
   text-decoration: none;
-  border-radius: 50%;
 }
 
-.large-button::after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  background-color: hsl(var(--clr-white)/0.15);
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  opacity: 0;
-  transition: opacity 500ms linear, transform 500ms ease-in-out;
-}
-
-.large-button:hover::after,
-.large-button:focus::after {
-  transform: scale(1.5);
-  opacity: 1;
-}
-
-/* Nav */
-.primary-navigation {
-  --gap: 8rem;
-  --underline-gap: 2rem;
+ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
-.primary-navigation a {
-  text-decoration: none;
+img {
+  max-width: 100%;
+  height: auto;
 }
 
-.primary-navigation a > span {
-  font-weight: 700;
-  margin-right: 0.5em;
-}
-
-.underline-indicators > * {
-  padding: var(--underline-gap, 1rem) 0;
-  border-bottom: 0.2rem solid hsl(var(--clr-white)/0);
-}
-
-.underline-indicators > *:hover,
-.underline-indicators > *:focus {
-  border-color: hsl(var(--clr-white)/0.5);
-}
-
-.underline-indicators > .active,
-.underline-indicators > [aria-selected=true] {
-  border-color: hsl(var(--clr-white)/1);
-  color: hsl(var(--clr-white)/1);
-}
-
-.tab-list {
-  --gap: 2rem;
-}
-
-.dot-indicators > * {
-  cursor: pointer;
-  border: 0;
-  border-radius: 50%;
-  aspect-ratio: 1;
-  padding: 0.25rem;
-  background-color: hsl(var(--clr-white)/0.25);
-}
-
-.dot-indicators > *:hover,
-.dot-indicators > *:focus {
-  background-color: hsl(var(--clr-white)/0.5);
-}
-
-.dot-indicators > [aria-selected=true] {
-  background-color: hsl(var(--clr-white)/1);
-}
-
-/* ========================== */
-/*       Utility Classes      */
-/* ========================== */
+/* ========= LAYOUT ========= */
 .flex {
   display: flex;
   gap: var(--gap, 1rem);
 }
 
-.grid {
-  display: grid;
-  gap: var(--gap, 1rem);
+/* ========= NAVBAR ========= */
+.primary-logo {
+  margin: 2rem;
 }
 
-.flow > * + * {
-  margin-top: 1rem;
-  outline: 1px solid red;
+.primary-header {
+  align-items: center;
+  justify-content: space-between;
 }
 
-.container {
-  padding-inline: 0 2em;
-  margin-inline: auto;
-  max-width: 80rem;
+.mobile-nav-toggle {
+  display: none;
 }
 
+.primary-navigation {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  background-color: hsla(0deg, 0%, 0%, 0.5);
+  backdrop-filter: blur(1rem); /* Blur Effect */
+}
+
+@supports (backdrop-filter: blur(1rem)) { /* Por si el navegador no admite este efecto */
+  .primary-navigation {
+    background-color: hsla(0deg, 0%, 100%, 0.1);
+    backdrop-filter: blur(1rem); /* Blur Effect */
+  }
+}
+.primary-navigation a > [aria-hidden=true] {
+  font-weight: 700;
+  margin-inline-end: 0.75em;
+}
+
+@media (max-width: 35em) {
+  .primary-navigation {
+    --gap: 2em;
+    position: fixed;
+    z-index: 1000;
+    inset: 0 0 0 30%;
+    flex-direction: column;
+    padding: min(30vh, 10rem) 2em;
+    transform: translateX(100%);
+    transition: transform 350ms ease-out;
+  }
+  .primary-navigation[data-visible=true] {
+    transform: translateX(0%);
+  }
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    z-index: 9999;
+    background-color: transparent;
+    background-image: url(../img/shared/icon-hamburger.svg);
+    background-repeat: no-repeat;
+    width: 2rem;
+    border: none;
+    aspect-ratio: 1;
+    top: 2rem;
+    right: 2rem;
+  }
+  .mobile-nav-toggle[aria-expanded=true] {
+    background-image: url(../img/shared/icon-close.svg);
+  }
+}
+@media (min-width: 35em) and (max-width: 55em) {
+  .primary-navigation a > span[aria-hidden] {
+    display: none;
+  }
+}
+@media (min-width: 35em) {
+  .primary-navigation {
+    --gap: clamp(1.5rem, 5vw, 3rem);
+    padding-block: 2rem;
+    padding-inline: clamp(3rem, 7vw, 10rem);
+  }
+}
+/* ========= HOME ========= */
 .sr-only {
   position: absolute;
   width: 1px;
@@ -352,4 +182,4 @@ select {
   border: 0;
 }
 
-/* ========= CREW ========= */ /* ========= DESTINATION ========= */ /* ========= TECHNOLOGY ========= */ /* ========= SCROLL ========= */ /* ========= MEDIAQUERIES ========= */
+/* ========= MEDIAQUERIES ========= */
