--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,11 +1,7 @@
-/* =============== */
-/*      Reset      */
-/* =============== */
-
-/* Box Sizing */
-*,
-*::after,
-*::before {
+/* ========= BASE ========= */
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -13,250 +9,24 @@ html {
     scroll-behavior: smooth;
 }
 
-/* Reset Margins */
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-figure,
-picture {
-    margin: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-p {
-    font-weight: 400;
-}
-
-/* Set up the body */
 body {
-    line-height: 1.5;
-    min-height: 100vh;
+    background-color: var(--clr-dark);
+    color: var(--clr-white);
     font-family: var(--ff-sans-normal);
-    font-size: var(--fs-400);
-    color: hsl(var(--clr-white));
-    background-color: hsl(var(--clr-dark));
+    font-size: var(--font-normal);
+    overflow-x: hidden;
 }
 
-/* Images */
-img,
-picture {
-    max-width: 100%;
-    display: block;
-}
-
-/* Form elements */
-input,
-button,
-textarea,
-select {
-    font: inherit;
-}
-
-/* Remove animations for people who have turned them off */
-@media (prefers-reduced-motion: reduce) {
-    *,
-    *::before,
-    *::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
-}
-
-/* Colors */
-.bg-dark {
-    background-color: hsl(var(--clr-dark));
-}
-
-.bg-accent {
-    background-color: hsl(var(--clr-light));
-}
-
-.bg-white {
-    background-color: hsl(var(--clr-white));
-}
-
-.text-dark {
-    color: hsl(var(--clr-dark));
-}
-
-.text-accent {
-    color: hsl(var(--clr-light));
-}
-
-.text-white {
-    color: hsl(var(--clr-white));
-}
-
-/* Typography */
-.ff-serif {
-    font-family: var(--ff-serif);
-}
-
-.ff-sans-cond {
-    font-family: var(--ff-sans-cond);
-}
-
-.ff-sans-normal {
-    font-family: var(--ff-sans-normal);
-}
-
-.letter-spacing-1 {
-    letter-spacing: 4.75px;
-}
-
-.letter-spacing-2 {
-    letter-spacing: 2.7px;
-}
-
-.letter-spacing-3 {
-    letter-spacing: 2.35px;
-}
-
-.uppercase {
-    text-transform: uppercase;
-}
-
-.fs-900 {
-    font-size: var(--fs-900);
-}
-
-.fs-800 {
-    font-size: var(--fs-800);
-}
-
-.fs-700 {
-    font-size: var(--fs-700);
-}
-
-.fs-600 {
-    font-size: var(--fs-600);
-}
-
-.fs-500 {
-    font-size: var(--fs-500);
-}
-
-.fs-400 {
-    font-size: var(--fs-400);
-}
-
-.fs-300 {
-    font-size: var(--fs-300);
-}
-
-.fs-200 {
-    font-size: var(--fs-200);
-}
-
-.fs-900, .fs-800, .fs-700, .fs-600 {
-    line-height: 1.1;
-}
-
-.numbered-title {
-    font-family: var(--ff-sans-cond);
-    font-size: var(--fs-500);
-    text-transform: uppercase;
-    letter-spacing: 4.72px;
-}
-
-.numbered-title span {
-    margin-right: .5em;
-    font-weight: 700;
-    color: hsl(var(--clr-white) /.25);
-}
-
-/* Components */
-.large-button {
-    position: relative;
-    display: grid;
-    z-index: 1;
-    place-items: center;
-    padding: 0 2em;
-    aspect-ratio: 1;
+a {
     text-decoration: none;
-    border-radius: 50%;
 }
 
-.large-button::after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    background-color: hsl(var(--clr-white) /.15);
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    opacity: 0;
-    transition: opacity 500ms linear, transform 500ms ease-in-out;
-}
-
-.large-button:hover::after,
-.large-button:focus::after {
-    transform: scale(1.5);
-    opacity: 1;
-}
-
-/* Nav */
-.primary-navigation {
-    --gap: 8rem;
-    --underline-gap: 2rem;
+ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
-.primary-navigation a {
-    text-decoration: none;
+img {
+    max-width: 100%;
+    height: auto;
 }
 
-.primary-navigation a > span {
-    font-weight: 700;
-    margin-right: .5em;
-}
-
-.underline-indicators > * {
-    padding: var(--underline-gap, 1rem) 0;
-    border-bottom: .2rem solid hsl(var(--clr-white) / 0 );
-}
-
-.underline-indicators > *:hover,
-.underline-indicators > *:focus {
-    border-color: hsl(var(--clr-white) / .5);
-}
-
-.underline-indicators > .active,
-.underline-indicators > [aria-selected="true"] {
-    border-color: hsl(var(--clr-white) / 1);
-    color: hsl(var(--clr-white) / 1);
-} 
-
-.tab-list {
-    --gap: 2rem;
-}
-
-.dot-indicators > * {
-    cursor: pointer;
-    border: 0;
-    border-radius: 50%;
-    aspect-ratio: 1;
-    padding: .25rem;
-    background-color: hsl(var(--clr-white) / .25);
-}
-
-.dot-indicators > *:hover,
-.dot-indicators > *:focus {
-    background-color: hsl(var(--clr-white) / .5);
-}
-
-.dot-indicators > [aria-selected="true"] {
-    background-color: hsl(var(--clr-white) / 1);
-} 
