--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -44,22 +44,21 @@
     font-display: swap;
 }
 
-
 :root {
     /* ========= COLORS ========= */
     /* ========= Primary ========= */
-    --clr-dark: 230, 35%, 7%;
-    --clr-light: 231, 77%, 90%;
-    --clr-white: 0, 0%, 100%;
+    --clr-dark: hsl(230, 35%, 7%);
+    --clr-light: hsl(231, 77%, 90%);
+    --clr-white: hsl(0, 0%, 100%);
 
     /* ========= FONT and TYPOGRAPHY ========= */
     --ff-serif: 'Bellefair', serif;
     --ff-sans-cond: 'Barlow Condensed', sans-serif;
     --ff-sans-normal: 'Barlow', sans-serif;
-    
+
 
     /* ========= Font sizes ========= */
-    --fs-900: 9.375rem;
+    --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
     --fs-800: 6.25rem;
     --fs-700: 3.5rem;
     --fs-600: 2rem;
