--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -1,35 +1,5 @@
-/* ========================== */
-/*       Utility Classes      */
-/* ========================== */
+/* ========= LAYOUT ========= */
 .flex {
     display: flex;
     gap: var(--gap, 1rem);
-}
-
-.grid {
-    display: grid;
-    gap: var(--gap, 1rem);
-}
-
-.flow > * + * {
-    margin-top: 1rem;
-    outline: 1px solid red;
-}
-
-.container {
-    padding-inline: 0 2em;
-    margin-inline: auto;
-    max-width: 80rem;
-}
-
-.sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
 }
