--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -1,41 +1,50 @@
 /* ========= NAVBAR ========= */
-.primary-logo {
-    margin: 2rem;
-}
+.primary {
+    &-logo {
+        margin: 2rem;
+    }
 
-.primary-header {
-    align-items: center;
-    justify-content: space-between;
+    &-header {
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &-navigation {
+        // --gap: 8rem;
+        // --underline-gap: 2rem;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        background-color: hsl(0 0% 0% / 0.5);
+        backdrop-filter: blur(1rem); /* Blur Effect */
+    }
+
+    &-nav-link {
+        color: var(--clr-white);
+    }
+
+    &-navigation a > [aria-hidden='true'] {
+        font-weight: 700;
+        margin-inline-end: 0.75em;
+    } 
 }
 
 .mobile-nav-toggle {
     display: none;
 }
 
-.primary-navigation {
-    // --gap: 8rem;
-    // --underline-gap: 2rem;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    background-color: hsl(0 0% 0% / 0.5);
-    backdrop-filter: blur(1rem); /* Blur Effect */
-}
-
 @supports (backdrop-filter: blur(1rem)) { /* Por si el navegador no admite este efecto */
-    .primary-navigation {
-        background-color: hsl(0 0% 100% / 0.1);
-        backdrop-filter: blur(1rem); /* Blur Effect */
+    .primary {
+        &-navigation {
+            background-color: hsl(0 0% 100% / 0.1);
+            backdrop-filter: blur(1rem); /* Blur Effect */
+        }
     }
 }
 
-.primary-navigation a > [aria-hidden='true'] {
-    font-weight: 700;
-    margin-inline-end: 0.75em;
-}
-
 @media (max-width: 35em) {
-    .primary-navigation {
+    .primary {
+        &-navigation {
         --gap: 2em;
         position: fixed;
         z-index: 1000;
@@ -44,42 +53,50 @@
         padding: min(30vh, 10rem) 2em;
         transform: translateX(100%);
         transition: transform 350ms ease-out;
+        }
+
+        &-navigation[data-visible='true'] {
+            transform: translateX(0%);
+        }
     }
 
-    .primary-navigation[data-visible='true'] {
-        transform: translateX(0%);
-    }
+    .mobile {
+        &-nav-toggle {
+            display: block;
+            position: absolute;
+            z-index: 9999;
+            background-color: transparent;
+            background-image: url(../img/shared/icon-hamburger.svg);
+            background-repeat: no-repeat;
+            width: 2rem;
+            border: none;
+            aspect-ratio: 1;
+            top: 2rem;
+            right: 2rem;
+            transform: translateY(15px);
+        }
 
-    .mobile-nav-toggle {
-        display: block;
-        position: absolute;
-        z-index: 9999;
-        background-color: transparent;
-        background-image: url(../img/shared/icon-hamburger.svg);
-        background-repeat: no-repeat;
-        width: 2rem;
-        border: none;
-        aspect-ratio: 1;
-        top: 2rem;
-        right: 2rem;
-    }
-
-    .mobile-nav-toggle[aria-expanded='true'] {
-        background-image: url(../img/shared/icon-close.svg);
+        &-nav-toggle[aria-expanded='true'] {
+            background-image: url(../img/shared/icon-close.svg);
+        }
     }
 }
 
-//Para que los numeros desparezcan 
+//Para que los numeros desaparezcan 
 @media (min-width: 35em) and (max-width: 55em) {
-    .primary-navigation a > span[aria-hidden] {
-        display: none;
+    .primary {
+        &-navigation a > span[aria-hidden] {
+            display: none;
+        }
     }
 }
 
 @media (min-width: 35em) {
-    .primary-navigation {
-        --gap: clamp(1.5rem, 5vw, 3rem);
-        padding-block: 2rem;
-        padding-inline: clamp(3rem, 7vw, 10rem);
+    .primary {
+        &-navigation {
+            --gap: clamp(1.5rem, 5vw, 3rem);
+            padding-block: 2rem;
+            padding-inline: clamp(3rem, 7vw, 10rem);
+        }
     }
 }
