--- a/assets/scss/components/_primary.scss
+++ b/assets/scss/components/_primary.scss
@@ -17,6 +17,67 @@
     background-size: cover;
 }
 
+.primary {
+    &-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    &-subheading {
+        font-family: var(--ff-sans-cond);
+        text-transform: uppercase;
+        font-size: 16px;
+        letter-spacing: 2.7px;
+        color: var(--clr-light);
+        margin-bottom: 1.5rem;
+    }
+
+    &-title {
+        color: var(--clr-white);
+        font-weight: 100;
+        font-size: 80px;
+        font-family: var(--ff-serif);
+        text-transform: uppercase;
+        margin-bottom: 1rem;
+    }
+
+    &-description {
+        color: var(--clr-light);
+        font-size: 15px;
+        line-height: 1.5rem;
+        max-width: 20rem;
+    }
+
+    &-button-container {
+        padding: 7rem;
+    }
+
+    &-button {
+        width: 150px;
+        height: 150px;
+        border: none;
+        background-color: var(--clr-white);
+        color: var(--clr-dark);
+        text-transform: uppercase;
+        border-radius: 50%;
+        font-family: var(--ff-serif);
+        font-size: 20px;
+    }
+
+    // Animate the size, outside
+    &-button:hover,
+    &-button:focus {
+        animation: pulse 1s;
+        box-shadow: 0 0 0 2em transparent;
+    }
+}
+
+@keyframes pulse {
+    0% { box-shadow: 0 0 0 0 var(--clr-light); }
+}
+
 @media (min-width: 35rem) {
     .home {
         background-image: url(../img/home/background-home-tablet.jpg);
