--- a/assets/scss/components/_destination.scss
+++ b/assets/scss/components/_destination.scss
@@ -18,6 +18,7 @@
         font-size: 16px;
         letter-spacing: 2.7px;
         margin-bottom: 2rem;
+        text-align: center;
     }
 
     &-subheading-number {
@@ -26,6 +27,12 @@
         font-size: 16px;
         color: var(--clr-grey);
         margin-inline-end: 0.75em;
+    }
+
+    &-information {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     &-img {
@@ -55,24 +62,26 @@
     &-nav-link:hover {
         color: var(--clr-white);
         cursor: pointer;
-        text-decoration-line: underline; 
+        text-decoration-line: underline;
+        text-underline-offset: 10px;
+        height: 10px; 
     }
 
-    &-nav-link:after {
-        content: "";
-        position: absolute;
-        height: 3px;
-        background-color: var(--clr-white);
-        width: 0;
-        left: 50%;
-        bottom: 0;
-        transform: translateX(-50%);
-        transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
-    }
+    // &-nav-link:after {
+    //     content: "";
+    //     position: absolute;
+    //     height: 3px;
+    //     background-color: var(--clr-white);
+    //     width: 0;
+    //     left: 50%;
+    //     bottom: 0;
+    //     transform: translateX(-50%);
+    //     transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
+    // }
     
-    &-nav-link:hover:after {
-        width: 100%;
-    }
+    // &-nav-link:hover:after {
+    //     width: 100%;
+    // }
 
     &-title {
         font-family: var(--ff-serif);
