technology mobile section added and mobile navbar underline adjustment

--- a/assets/scss/components/_mediaqueries.scss
+++ b/assets/scss/components/_mediaqueries.scss
@@ -1,1 +1,21 @@
 /* ========= MEDIAQUERIES ========= */
+/* For medium devices */
+@media screen and (min-width: 576px) {
+
+}
+
+
+@media screen and (min-width: 768px) {
+
+}
+
+
+/* For larger devices */
+@media screen and (min-width: 992px) {
+
+}
+
+
+@media screen and (min-width: 1440px) {
+    
+}
