--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,6 +165,20 @@ img {
   .primary-navigation[data-visible=true] {
     transform: translateX(0%);
   }
+  .primary-nav-item:hover {
+    border: none;
+    height: 19px;
+    border-right-style: solid;
+    border-right-width: 7px;
+    border-right-color: var(--clr-white);
+  }
+  .primary-active {
+    border: none;
+    height: 19px;
+    border-right-style: solid;
+    border-right-width: 7px;
+    border-right-color: var(--clr-white);
+  }
   .mobile-nav-toggle {
     display: block;
     position: absolute;
@@ -208,12 +222,16 @@ img {
   border: 0;
 }
 
-.home {
-  background: url(../img/home/background-home-mobile.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+.primary-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  object-position: center;
+  z-index: -1;
 }
-
 .primary-container {
   display: flex;
   flex-direction: column;
@@ -239,7 +257,7 @@ img {
 .primary-description {
   color: var(--clr-light);
   font-size: 15px;
-  line-height: 1.5rem;
+  line-height: 28px;
   max-width: 20rem;
 }
 .primary-button-container {
@@ -266,26 +284,19 @@ img {
     box-shadow: 0 0 0 0 var(--clr-light);
   }
 }
-@media (min-width: 35rem) {
-  .home {
-    background-image: url(../img/home/background-home-tablet.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-}
-@media (min-width: 45rem) {
-  .home {
-    background-image: url(../img/home/background-home-desktop.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-}
 /* ========= CREW ========= */
 .crew {
-  background: url(../img/crew/background-crew-mobile.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
   /* Active item work*/
+}
+.crew-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  object-position: center;
+  z-index: -1;
 }
 .crew-subheading {
   font-family: var(--ff-sans-cond);
@@ -300,7 +311,8 @@ img {
   font-family: var(--ff-sans-cond);
   font-weight: 700;
   font-size: 16px;
-  color: var(--clr-grey);
+  color: var(--clr-white);
+  opacity: 25%;
   margin-inline-end: 0.75em;
 }
 .crew-container {
@@ -332,6 +344,10 @@ img {
 }
 .crew-swiper-button:hover {
   filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+  opacity: 50%;
+}
+.crew-swiper-button:active {
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
   opacity: 100%;
 }
 .crew-active {
@@ -339,11 +355,12 @@ img {
   opacity: 100%;
 }
 .crew-profile {
-  color: var(--clr-grey);
+  color: var(--clr-white);
   text-transform: uppercase;
   font-family: var(--ff-serif);
   font-size: 16px;
   margin-bottom: 0.5rem;
+  opacity: 49.51%;
 }
 .crew-name {
   font-family: var(--ff-serif);
@@ -356,7 +373,7 @@ img {
 .crew-description {
   color: var(--clr-light);
   font-size: 15px;
-  line-height: 1.5rem;
+  line-height: 28px;
 }
 .crew-swiper-button {
   width: 10px;
@@ -366,9 +383,17 @@ img {
 
 /* ========= DESTINATION ========= */
 .destination {
-  background: url(../img/destination/background-destination-mobile.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* Active Item Destination*/
+}
+.destination-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  object-position: center;
+  z-index: -1;
 }
 .destination-container {
   display: flex;
@@ -389,8 +414,9 @@ img {
   font-family: var(--ff-sans-cond);
   font-weight: 700;
   font-size: 16px;
-  color: var(--clr-grey);
+  color: var(--clr-white);
   margin-inline-end: 0.75em;
+  opacity: 25%;
 }
 .destination-information {
   display: flex;
@@ -419,6 +445,21 @@ img {
 }
 .destination-nav-link:hover {
   color: var(--clr-white);
+  opacity: 50%;
+  cursor: pointer;
+  text-decoration-line: underline;
+  text-underline-offset: 10px;
+  height: 10px;
+}
+.destination-nav-link:active {
+  color: var(--clr-white);
+  cursor: pointer;
+  text-decoration-line: underline;
+  text-underline-offset: 10px;
+  height: 10px;
+}
+.destination-active {
+  color: var(--clr-white);
   cursor: pointer;
   text-decoration-line: underline;
   text-underline-offset: 10px;
@@ -435,12 +476,12 @@ img {
 .destination-description {
   color: var(--clr-light);
   font-size: 15px;
-  line-height: 1.5rem;
+  line-height: 28px;
 }
 .destination-numbers {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 .destination-line {
   width: 327px;
@@ -463,4 +504,92 @@ img {
   font-size: 28px;
 }
 
+/* ========= TECHNOLOGY ========= */
+.technology {
+  /* Active Item Technology*/
+}
+.technology-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  object-position: center;
+  z-index: -1;
+}
+.technology-subheading {
+  font-family: var(--ff-sans-cond);
+  font-weight: normal;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 2.7px;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+.technology-subheading-number {
+  font-family: var(--ff-sans-cond);
+  font-weight: 700;
+  font-size: 16px;
+  color: var(--clr-white);
+  margin-inline-end: 0.75em;
+  opacity: 25%;
+}
+.technology-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.technology-numbers-container {
+  display: flex;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+.technology-numbers-circle {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  border: 1px solid var(--clr-grey);
+  color: var(--clr-white);
+  text-align: center;
+  font-family: var(--ff-serif);
+}
+.technology-numbers-circle:hover {
+  border: 1px solid var(--clr-white);
+  cursor: pointer;
+}
+.technology-active {
+  border: 1px solid var(--clr-white);
+  color: var(--clr-dark);
+  background-color: var(--clr-white);
+}
+.technology-info {
+  margin-top: 2rem;
+}
+.technology-terminology {
+  color: var(--clr-light);
+  font-size: 13px;
+  letter-spacing: 2.36px;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+}
+.technology-title {
+  font-family: var(--ff-serif);
+  color: var(--clr-white);
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: 100;
+  margin-bottom: 1rem;
+}
+.technology-description {
+  color: var(--clr-light);
+  font-size: 15px;
+  font-family: var(--ff-sans-normal);
+  line-height: 25px;
+}
+
 /* ========= MEDIAQUERIES ========= */
+/* For medium devices */
+/* For larger devices */
