--- a/assets/scss/components/_crew.scss
+++ b/assets/scss/components/_crew.scss
@@ -1,8 +1,15 @@
 /* ========= CREW ========= */
 .crew {
-    background: url(../img/crew/background-crew-mobile.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    &-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+        object-position: center;
+        z-index: -1;
+    }
 
     &-subheading {
         font-family: var(--ff-sans-cond);
@@ -18,7 +25,8 @@
         font-family: var(--ff-sans-cond);
         font-weight: 700;
         font-size: 16px;
-        color: var(--clr-grey);
+        color: var(--clr-white);
+        opacity: 25%;
         margin-inline-end: 0.75em;
     }
 
@@ -56,6 +64,11 @@
 
     &-swiper-button:hover {
         filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+        opacity: 50%;
+    }
+
+    &-swiper-button:active {
+        filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
         opacity: 100%;
     }
 
@@ -66,11 +79,12 @@
     }
 
     &-profile {
-        color: var(--clr-grey);
+        color: var(--clr-white);
         text-transform: uppercase;
         font-family: var(--ff-serif);
         font-size: 16px;
         margin-bottom: 0.5rem;
+        opacity: 49.51%;
     }
 
     &-name {
@@ -85,7 +99,7 @@
     &-description {
         color: var(--clr-light);
         font-size: 15px;
-        line-height: 1.5rem;
+        line-height: 28px;
     }
 
     &-swiper-button {
