--- a/assets/scss/components/_destination.scss
+++ b/assets/scss/components/_destination.scss
@@ -1,8 +1,15 @@
 /* ========= DESTINATION ========= */
 .destination {
-    background: url(../img/destination/background-destination-mobile.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    &-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+        object-position: center;
+        z-index: -1;
+    }
 
     &-container {
         display: flex;
@@ -25,8 +32,9 @@
         font-family: var(--ff-sans-cond);
         font-weight: 700;
         font-size: 16px;
-        color: var(--clr-grey);
+        color: var(--clr-white);
         margin-inline-end: 0.75em;
+        opacity: 25%;
     }
 
     &-information {
@@ -61,27 +69,29 @@
     
     &-nav-link:hover {
         color: var(--clr-white);
+        opacity: 50%;
         cursor: pointer;
         text-decoration-line: underline;
         text-underline-offset: 10px;
         height: 10px; 
     }
 
-    // &-nav-link:after {
-    //     content: "";
-    //     position: absolute;
-    //     height: 3px;
-    //     background-color: var(--clr-white);
-    //     width: 0;
-    //     left: 50%;
-    //     bottom: 0;
-    //     transform: translateX(-50%);
-    //     transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
-    // }
-    
-    // &-nav-link:hover:after {
-    //     width: 100%;
-    // }
+    &-nav-link:active {
+        color: var(--clr-white);
+        cursor: pointer;
+        text-decoration-line: underline;
+        text-underline-offset: 10px;
+        height: 10px; 
+    }
+
+    /* Active Item Destination*/
+    &-active {
+        color: var(--clr-white);
+        cursor: pointer;
+        text-decoration-line: underline;
+        text-underline-offset: 10px;
+        height: 10px; 
+    }
 
     &-title {
         font-family: var(--ff-serif);
@@ -95,13 +105,13 @@
     &-description {
         color: var(--clr-light);
         font-size: 15px;
-        line-height: 1.5rem;
+        line-height: 28px;
     }
 
     &-numbers {
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1.5rem;
     }
 
     &-line {
