--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -28,6 +28,12 @@
         font-weight: 700;
         margin-inline-end: 0.75em;
     }
+
+    // &-nav-item:hover {
+    //     text-decoration-line: underline;
+    //     text-underline-offset: 35px;
+    //     text-underline-position: right;
+    // }
 }
 
 .mobile-nav-toggle {
@@ -58,6 +64,22 @@
 
         &-navigation[data-visible='true'] {
             transform: translateX(0%);
+        }
+
+        &-nav-item:hover {
+            border: none;
+            height: 19px;
+            border-right-style: solid;
+            border-right-width: 7px;
+            border-right-color: var(--clr-white);
+        }
+
+        &-active {
+            border: none;
+            height: 19px;
+            border-right-style: solid;
+            border-right-width: 7px;
+            border-right-color: var(--clr-white);
         }
     }
 
