--- a/assets/scss/components/_primary.scss
+++ b/assets/scss/components/_primary.scss
@@ -11,13 +11,18 @@
     border: 0;
 }
 
-.home {
-    background: url(../img/home/background-home-mobile.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 .primary {
+    &-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+        object-position: center;
+        z-index: -1;
+    }
+
     &-container {
         display: flex;
         flex-direction: column;
@@ -46,7 +51,7 @@
     &-description {
         color: var(--clr-light);
         font-size: 15px;
-        line-height: 1.5rem;
+        line-height: 28px;
         max-width: 20rem;
     }
 
@@ -78,18 +83,18 @@
     0% { box-shadow: 0 0 0 0 var(--clr-light); }
 }
 
-@media (min-width: 35rem) {
-    .home {
-        background-image: url(../img/home/background-home-tablet.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-}
+// @media (min-width: 35rem) {
+//     .home {
+//         background-image: url(../img/home/background-home-tablet.jpg);
+//         background-repeat: no-repeat;
+//         background-size: cover;
+//     }
+// }
 
-@media (min-width: 45rem) {
-    .home {
-        background-image: url(../img/home/background-home-desktop.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-}
+// @media (min-width: 45rem) {
+//     .home {
+//         background-image: url(../img/home/background-home-desktop.jpg);
+//         background-repeat: no-repeat;
+//         background-size: cover;
+//     }
+// }
