--- a/assets/scss/components/_crew.scss
+++ b/assets/scss/components/_crew.scss
@@ -100,6 +100,7 @@
         color: var(--clr-light);
         font-size: 15px;
         line-height: 28px;
+        max-width: 20rem;
     }
 
     &-swiper-button {
