--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -28,12 +28,6 @@
         font-weight: 700;
         margin-inline-end: 0.75em;
     }
-
-    // &-nav-item:hover {
-    //     text-decoration-line: underline;
-    //     text-underline-offset: 35px;
-    //     text-underline-position: right;
-    // }
 }
 
 .mobile-nav-toggle {
@@ -49,7 +43,7 @@
     }
 }
 
-@media (max-width: 35em) {
+@media (max-width: 560px) {
     .primary {
         &-navigation {
         --gap: 2em;
@@ -106,7 +100,7 @@
 }
 
 //Para que los numeros desaparezcan 
-@media (min-width: 35em) and (max-width: 55em) {
+@media (min-width: 560px) and (max-width: 880px) {
     .primary {
         &-navigation a > span[aria-hidden] {
             display: none;
@@ -114,7 +108,7 @@
     }
 }
 
-@media (min-width: 35em) {
+@media (min-width: 560px) {
     .primary {
         &-navigation {
             --gap: clamp(1.5rem, 5vw, 3rem);
