--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -75,6 +75,10 @@
             border-right-width: 7px;
             border-right-color: var(--clr-white);
         }
+
+        &-line {
+            display: none;
+        }
     }
 
     .mobile {
