--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -179,6 +179,9 @@ img {
     border-right-width: 7px;
     border-right-color: var(--clr-white);
   }
+  .primary-line {
+    display: none;
+  }
   .mobile-nav-toggle {
     display: block;
     position: absolute;
@@ -721,3 +724,46 @@ img {
   }
 }
 /* For larger devices */
+@media screen and (min-width: 992px) {
+  .primary-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 20rem;
+  }
+  .primary-container-data {
+    text-align: left;
+  }
+  .primary-subheading {
+    font-size: 28px;
+  }
+  .primary-title {
+    font-size: 150px;
+  }
+  .primary-description {
+    font-size: 18px;
+    line-height: 32px;
+    letter-spacing: 1px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .primary-container {
+    justify-content: space-around;
+    top: 19rem;
+  }
+  .primary-button {
+    width: 274px;
+    height: 274px;
+    font-size: 32px;
+  }
+  .primary-line {
+    display: block;
+    width: 800px;
+    opacity: 25.15%;
+    border: 1px solid var(--clr-white);
+    transform: translateX(120px);
+    z-index: 1;
+  }
+}
