--- a/assets/scss/components/_destination.scss
+++ b/assets/scss/components/_destination.scss
@@ -103,6 +103,7 @@
         display: flex;
         flex-direction: column;
         gap: 1.5rem;
+        justify-content: center;
     }
 
     &-line {
