--- a/assets/scss/components/_mediaqueries.scss
+++ b/assets/scss/components/_mediaqueries.scss
@@ -47,11 +47,18 @@
             padding: 4rem;
         }
 
+        //Navbar Desktop
         &-nav-link:hover {
             border-bottom-style: solid;
             padding-bottom: 30px;
             border-bottom-width: 3.1px;
             width: fit-content;
+        }
+
+        &-nav-active {
+            border-bottom-style: solid;
+            width: fit-content;
+            padding-bottom: 30px;
         }
     }
 
